--- a/IOOP Assignment/Properties/Resources.resx
+++ b/IOOP Assignment/Properties/Resources.resx
@@ -118,22 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="121-1215004_graduation-icon-png-image-college-student-icon-png" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\121-1215004_graduation-icon-png-image-college-student-icon-png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="img_525162" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_5251621.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="img_5251621" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_5251621.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="key-icon-614x460" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\key-icon-614x460.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Sample_User_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sample_User_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="key-icon-614x4601" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\key-icon-614x4601.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="121-1215004_graduation-icon-png-image-college-student-icon-png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\121-1215004_graduation-icon-png-image-college-student-icon-png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_525162" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_5251621.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key-icon-614x460" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key-icon-614x460.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="student" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\student.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
