--- a/IOOP Assignment/ReceptionHomepage.resx
+++ b/IOOP Assignment/ReceptionHomepage.resx
@@ -67,4 +67,7 @@
         btfBLVuY8Y2dWcH0s8QICkLfNYYn+JVgmA6KN+iyEqD/x9KyAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
